--- a/tests/imports/list/list.html
+++ b/tests/imports/list/list.html
@@ -1,7 +1,7 @@
 <template name="list">
     {{#unless loadComplete}}
-        <div class="well well-lg clearfix">
-            <span class="pull-right">
+        <div class="card clearfix">
+            <span class="float-right">
                 <i class="fa fa-fw fa-spinner fa-pulse"></i>
             </span>
             <span>Loading...</span>
@@ -10,20 +10,20 @@
     <ul class="list-group">
         {{#each documents}}
             <li class="list-group-item">
-                    <span class="pull-right">
-                        <button class="btn btn-sm btn-default" data-target="{{this._id}}">
+                    <span class="float-right">
+                        <button class="list-edit-entry-button btn btn-sm btn-default" data-target="{{this._id}}">
                             <i class="fa fa-fw fa-pencil"></i>
                         </button>
                     </span>
                 <span>
-                        <strong>{{this.title}}</strong><br>
-                        <small>{{this.description}}</small>
-                    </span>
+                    <strong>{{this.title}}</strong><br>
+                    <small>{{this.description}}</small>
+                </span>
             </li>
             {{else}}
             <li class="list-group-item">
                 <div class="jumbotron">
-                    <h4 class="center">No documents yet in collection.</h4>
+                    <h5 class="center">No documents yet in collection.</h5>
                 </div>
             </li>
         {{/each}}
