--- a/package/autoform-documents/autoform-documents.html
+++ b/package/autoform-documents/autoform-documents.html
@@ -50,11 +50,17 @@
                                     </button>
                                     </span>
                                 <span><strong>{{this.label}}</strong></span>
+                                {{#if this.description}}
+                                    <br><span><small>{{this.description}}</small></span>
+                                {{/if}}
                             </li>
                         {{else}}
                             <li class="list-group-item afDocumentsEntry afDocumentsClickable"
                                 data-target="{{this.value}}" data-label="{{this.label}}">
                                 <span><strong>{{this.label}}</strong></span>
+                                {{#if this.description}}
+                                    <br><span><small>{{this.description}}</small></span>
+                                {{/if}}
                             </li>
                         {{/if}}
                     {{/each}}
