changed check button class to btn-primary

--- a/package/autoform-documents/autoform-documents.html
+++ b/package/autoform-documents/autoform-documents.html
@@ -45,7 +45,7 @@
                                     <button class="afDocumentsEditButton btn btn-sm btn-secondary" data-target="{{this.value}}">
                                         <i class="fa fa-fw fa-pencil"></i>
                                     </button>
-                                    <button class="afDocumentsApplyButton btn btn-sm btn-secondary" data-target="{{this.value}}">
+                                    <button class="afDocumentsApplyButton btn btn-sm btn-primary" data-target="{{this.value}}">
                                         <i class="fa fa-fw fa-check"></i>
                                     </button>
                                     </span>
