--- a/package/autoform-documents/autoform-documents.html
+++ b/package/autoform-documents/autoform-documents.html
@@ -8,15 +8,13 @@
 
 <template name="afDocuments">
     {{#unless loadComplete}}
-        <div class="card">
-            <div class="card-title text-center">
+            <p class="text-center">
                 <i class="fa fa-fw fa-spinner fa-pulse"></i>
-            </div>
-        </div>
+            </p>
     {{else}}
         {{#unless listMode}}
-            <div class="card afDocumentsCard">
-                <ul class="list-group">
+            <div class="border-top">
+                <ul class="list-group border-0">
                     {{#with target}}
                         <li class="list-group-item afDocumentsClickable afDocumentsFirstOption">
                             {{> afDocumentsAddButton}}
@@ -34,8 +32,8 @@
                 </ul>
             </div>
         {{else}}
-            <div class="card afDocumentsCard afDocumentsScrollContainer">
-                <ul class="list-group afDocumentsListGroup">
+            <div class="border-top border-right border-bottom afDocumentsScrollContainer">
+                <ul class="list-group afDocumentsListGroup afDocumentsList">
                     <li class="list-group-item afDocumentsClickable afDocumentsSelectButtons afDocumentsUnselect text-muted">
                         {{> afDocumentsAddButton}}
                         {{firstOption}}
@@ -72,7 +70,6 @@
                 </ul>
             </div>
         {{/unless}}
-
         <!-- Modal -->
         <div class="afDocumentsFormModal modal fade" id="afDocumentsFormModal" tabindex="-1" role="dialog"
              aria-labelledby="afDocumentsFormModalLabel" aria-hidden="true">
