--- a/package/autoform-documents/autoform-documents.html
+++ b/package/autoform-documents/autoform-documents.html
@@ -6,18 +6,22 @@
     </span>
 </template>
 
+<template name="afDocumentsLoading">
+    <p class="text-center font-bold">
+        <i class="fa fa-fw fa-spinner fa-pulse fa-2x"></i>
+    </p>
+</template>
+
 <template name="afDocuments">
     {{#unless loadComplete}}
-        <p class="text-center">
-            <i class="fa fa-fw fa-spinner fa-pulse"></i>
-        </p>
+        {{> afDocumentsLoading}}
     {{else}}
         {{#unless listMode}}
             <div class="border-top">
                 <ul class="list-group border-0">
                     {{#with target}}
-                        <li class="list-group-item afDocumentsClickable afDocumentsFirstOption">
-                            {{> afDocumentsAddButton}}
+                        <li class="list-group-item {{#if disabled}}disabled{{else}}afDocumentsClickable afDocumentsFirstOption{{/if}}">
+                            {{#unless disabled}}{{> afDocumentsAddButton}}{{/unless}}
                             <span><strong>{{this.label}}</strong></span>
                             {{#if this.description}}
                                 <br><span><small>{{this.description}}</small></span>
@@ -72,6 +76,7 @@
         {{/unless}}
         <!-- Modal -->
         <div class="afDocumentsFormModal modal fade" id="afDocumentsFormModal" tabindex="-1" role="dialog"
+             data-instanceid="{{instanceId}}"
              aria-labelledby="afDocumentsFormModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="dialog">
 
@@ -83,30 +88,29 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body">
-                        {{#if editTarget}}
-                            {{#with afDocumentsEditContext}}
-                                {{> quickForm id="afDocumentsExternalDocEditForm"
-                                        type="normal"
+                    {{#with afDocumentsFormContext}}
+                        <div class="modal-body">
+                            {{#autoForm id=this.id
+                                        type=this.formType
                                         doc=this.doc
-                                        schema=this.schema
-                                        buttonClasses=this.buttonClasses
-                                        buttonContent=this.buttonContent}}
-                            {{/with}}
-                        {{/if}}
-                        {{#if insertTarget}}
-                            {{#with afDocumentsInsertContext}}
-                                {{> quickForm id="afDocumentsExternalDocInsertForm"
-                                        type="normal"
-                                        schema=this.schema
-                                        buttonClasses=this.buttonClasses
-                                        buttonContent=this.buttonContent}}
-                            {{/with}}
-                        {{/if}}
-                    </div>
-                    <div class="modal-footer"></div>
+                                        schema=this.schema}}
+                                {{#each afFieldNames}}
+                                    {{> afQuickField name=this.name options=afOptionsFromSchema}}
+                                {{/each}}
+                            {{/autoForm}}
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit"
+                                    disabled="{{#if this.disabled}}disabled{{/if}}"
+                                    class="{{this.buttonClasses}}"
+                                    form="{{this.id}}">
+                                {{this.buttonContent}}
+                            </button>
+                        </div>
+                    {{else}}
+                        {{> afDocumentsLoading}}
+                    {{/with}}
                 </div>
-
             </div>
         </div>
         <!-- autoform related -->
